UI really mostly done

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,25 +23,6 @@ $background-color: #FFFFF0;
     font-weight: bold;
   }
 
-  .formWrapper {
-    background-color: rgba($secondary-color, 0.5);
-    padding: 50px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 500px;
-    width: 70vmin;
-    border-radius: 20px;
-    .dateWrapper {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .dateSpacer {
-        width: 5vmin;
-      }
-    }
-  }
 
   .submitButton{
     background-color: $accent-color;
@@ -57,6 +38,11 @@ $background-color: #FFFFF0;
     }
   }
 }
+
+@import './components/currencyInput.scss';
+@import './components/taxForm.scss';
+@import './components/resultsModal.scss';
+
 
 
 /*$primary-color-classic: #003366;
